--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "node server.js",
     "start": "node server.js"
   },
-  "author": "Mukti",
+  "author": "Spandana",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.0.1",
